--- a/Movie Rental Website - DakotaPerry/login.htm
+++ b/Movie Rental Website - DakotaPerry/login.htm
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--	ShowGhost Homepage
+	  	Author: Dakota Perry
+	  	Date: January 20, 2020
+	  	V.2.2 as of July 16, 2020
+-->
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -8,6 +13,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
+  <!-- Navbar Displayed At Top Of Website-->
   <nav class="navbar navbar-dark navbar-expand-xl justify-content-between sticky-top" style="background-color: #040455;">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-nav">
@@ -47,7 +53,7 @@
       <!--Form Contents-->
       <div class="tab-content" id="pills-tabContent">
         <!--Sign In Content-->
-        <!--This is activated when visiting page first time (change this based on how user arrived later on, DAKOTA), or when the sign in pill button is clicked-->
+        <!--This is activated when visiting page first time (change this based on how user arrived later on), or when the sign in pill button is clicked-->
         <div class="tab-pane fade show active" id="pills-signin" role="tabpanel" aria-labelledby="pills-signin-tab">
           <div class="col-sm-12 border border-primary shadow rounded pt-2">
             <!--Centered ShowGhost Rounded Circle Logo with border and no padding-->
